--- a/notebooks/P1-Setup-and-OOP.ipynb
+++ b/notebooks/P1-Setup-and-OOP.ipynb
@@ -200,15 +200,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mike's initial age: 35\n",
-      "Mike's age after his birthday: 36\n"
+      "Mike's initial age: 36\n",
+      "Mike's age after his birthday: 37\n"
      ]
     }
    ],
@@ -457,7 +457,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "cifo",
    "language": "python",
    "name": "python3"
   },
@@ -471,7 +471,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
