--- a/notebooks-class/P2-HillClimbing-IntBin-Part1.ipynb
+++ b/notebooks-class/P2-HillClimbing-IntBin-Part1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,8 +81,25 @@
    "outputs": [],
    "source": [
     "class Solution(ABC):\n",
-    "    #TODO\n",
-    "    pass"
+    "    def __init__(self, repr=None):\n",
+    "        # To initialize a solution we need to know it's representation. If no representation is given, a solution is randomly initialized.\n",
+    "        if repr == None:\n",
+    "            repr = self.random_initial_value()\n",
+    "        # Attributes\n",
+    "        self.repr = repr\n",
+    "\n",
+    "    # Method that is called when we run print(object of the class)\n",
+    "    def __repr__(self):\n",
+    "        return str(self.repr)\n",
+    "\n",
+    "    # Other methods that must be implemented in subclasses\n",
+    "    @abstractmethod\n",
+    "    def fitness(self):\n",
+    "        pass\n",
+    "\n",
+    "    @abstractmethod\n",
+    "    def random_initial_value():\n",
+    "        pass"
    ]
   },
   {
@@ -130,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,9 +220,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'IntBinSolution' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Intialize with representation\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m solution \u001b[38;5;241m=\u001b[39m \u001b[43mIntBinSolution\u001b[49m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m0001\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Initialize with random representation\u001b[39;00m\n\u001b[0;32m      5\u001b[0m solution_random \u001b[38;5;241m=\u001b[39m IntBinSolution()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'IntBinSolution' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Intialize with representation\n",
     "solution = IntBinSolution('0001')\n",
@@ -326,7 +355,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "cifo",
    "language": "python",
    "name": "python3"
   },
@@ -340,7 +369,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
