--- a/notebooks-class/P2-HillClimbing-IntBin-Part1.ipynb
+++ b/notebooks-class/P2-HillClimbing-IntBin-Part1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,30 +76,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Solution(ABC):\n",
     "    def __init__(self, repr=None):\n",
-    "        # To initialize a solution we need to know it's representation. If no representation is given, a solution is randomly initialized.\n",
-    "        if repr == None:\n",
-    "            repr = self.random_initial_value()\n",
-    "        # Attributes\n",
-    "        self.repr = repr\n",
-    "\n",
-    "    # Method that is called when we run print(object of the class)\n",
+    "        if repr==None: #if not repr\n",
+    "            repr=self.random_init_value()\n",
+    "        self.repr=repr\n",
+    "    \n",
     "    def __repr__(self):\n",
-    "        return str(self.repr)\n",
+    "        return self.repr\n",
     "\n",
-    "    # Other methods that must be implemented in subclasses\n",
     "    @abstractmethod\n",
     "    def fitness(self):\n",
     "        pass\n",
-    "\n",
+    "    \n",
     "    @abstractmethod\n",
-    "    def random_initial_value():\n",
-    "        pass"
+    "    def random_init_value(self):\n",
+    "        pass\n",
+    "\n"
    ]
   },
   {
@@ -147,11 +144,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO: Implement hill climbing algorithm"
+    "from copy import deepcopy\n",
+    "\n",
+    "def hill_climbing(initial_solution, maximization, max_iter=99999,verbose=False):\n",
+    "\n",
+    "    if not isinstance(initial_solution,Solution):\n",
+    "        raise ValueError(\"Initial solution is not solution\")\n",
+    "\n",
+    "    current_solution=initial_solution\n",
+    "    improved=True\n",
+    "    iter=1\n",
+    "\n",
+    "    if verbose:\n",
+    "            print(f'Current solution: {initial_solution} with fitness {initial_solution.fitness()}')\n",
+    "\n",
+    "    while improved:\n",
+    "        improved=False\n",
+    "        neighbors=current_solution.get_neighbors()\n",
+    "        for neighbor in neighbors:\n",
+    "            if maximization:\n",
+    "                if neighbor.fitness()>=current_solution.fitness():\n",
+    "                    current_solution=deepcopy(neighbor)\n",
+    "                    improved=True\n",
+    "            else:\n",
+    "                if neighbor.fitness()<=current_solution.fitness():\n",
+    "                    current_solution=deepcopy(neighbor)\n",
+    "                    improved=True\n",
+    "        if verbose:\n",
+    "            print(f'New Current solution: {current_solution} with fitness {current_solution.fitness()}')\n",
+    "\n",
+    "        iter+=1\n",
+    "        if iter>=max_iter:\n",
+    "            break\n",
+    "    return current_solution\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -204,11 +235,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO: Implement IntBinSolution class"
+    "class IntBinSolution(Solution):\n",
+    "    def __init__(self, repr=None):\n",
+    "        super().__init__(repr)\n",
+    "    \n",
+    "    def random_init_value(self):\n",
+    "        random=randint(1,15)\n",
+    "        return format(random,\"04b\")\n",
+    "    \n",
+    "    def fitness(self):\n",
+    "        return self.repr.count(\"1\")\n",
+    "    "
    ]
   },
   {
@@ -220,18 +261,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'IntBinSolution' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[6], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Intialize with representation\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m solution \u001b[38;5;241m=\u001b[39m \u001b[43mIntBinSolution\u001b[49m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m0001\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Initialize with random representation\u001b[39;00m\n\u001b[0;32m      5\u001b[0m solution_random \u001b[38;5;241m=\u001b[39m IntBinSolution()\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'IntBinSolution' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Solution 0001 with fitness 1\n",
+      "Random solution 0010 with fitness 1\n"
      ]
     }
    ],
@@ -276,11 +314,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO: Implement IntBin_IntNeighborhood_HillClimbingSolution class"
+    "class IntBin_IntNeighborhood_HillClimbingSolution(IntBinSolution):\n",
+    "    def __init__(self, repr=None):\n",
+    "        super().__init__(repr)   #inutil\n",
+    "    \n",
+    "    def get_neighbors(self):\n",
+    "        bin_repr=self.repr\n",
+    "        integer_repr=int(bin_repr,2)\n",
+    "\n",
+    "        if integer_repr==15:\n",
+    "            neighbor_bin_repr= format(14,\"04b\")\n",
+    "            return [IntBin_IntNeighborhood_HillClimbingSolution(repr=neighbor_bin_repr)]\n",
+    "        \n",
+    "        if integer_repr==1:\n",
+    "            neighbor_bin_repr= format(2,\"04b\")\n",
+    "            return [IntBin_IntNeighborhood_HillClimbingSolution(repr=neighbor_bin_repr)]\n",
+    "        \n",
+    "        else:\n",
+    "            neighbor1_bin_repr=format(integer_repr-1, \"04b\")\n",
+    "            neighbor2_bin_repr=format(integer_repr+1, \"04b\")\n",
+    "            return [IntBin_IntNeighborhood_HillClimbingSolution(repr=neighbor1_bin_repr),IntBin_IntNeighborhood_HillClimbingSolution(repr=neighbor2_bin_repr)]"
    ]
   },
   {
@@ -292,9 +349,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Solution 1010\n",
+      "Neighbors:\n",
+      "1001\n",
+      "1011\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize a random solution\n",
     "solution = IntBin_IntNeighborhood_HillClimbingSolution('1010')\n",
@@ -315,11 +383,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current solution: 1100 with fitness 2\n",
+      "New Current solution: 1101 with fitness 3\n",
+      "New Current solution: 1110 with fitness 3\n",
+      "New Current solution: 1111 with fitness 4\n",
+      "New Current solution: 1111 with fitness 4\n",
+      "Best sol 1111\n"
+     ]
+    }
+   ],
    "source": [
-    "#TODO: Apply hill climbing to IntBin"
+    "initial_solution=IntBin_IntNeighborhood_HillClimbingSolution()\n",
+    "best_sol=hill_climbing(initial_solution,maximization=True,verbose=True)\n",
+    "print('Best sol',best_sol)"
    ]
   },
   {
@@ -331,11 +414,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1111\n",
+      "1011\n",
+      "1111\n",
+      "1011\n",
+      "1111\n",
+      "0111\n",
+      "0011\n",
+      "1111\n",
+      "0011\n",
+      "1111\n"
+     ]
+    }
+   ],
    "source": [
-    "#TODO: Apply hill climbing to IntBin 10 times with differnt random initial solutions"
+    "for i in range(10):\n",
+    "    initial_solution=IntBin_IntNeighborhood_HillClimbingSolution()\n",
+    "    best_sol=hill_climbing(initial_solution,maximization=True)\n",
+    "    print(best_sol)"
    ]
   },
   {
