--- a/notebooks-class/P3-HillClimbing-IntBin-Part2-FitnessLandscape.ipynb
+++ b/notebooks-class/P3-HillClimbing-IntBin-Part2-FitnessLandscape.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,11 +56,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO: Implement IntBin_BitFlip_HillClimbingSolution class"
+    "#TODO: Implement IntBin_BitFlip_HillClimbingSolution class\n",
+    "class IntBin_BitFlip_HillClimbingSolution(IntBinSolution):\n",
+    "    def get_neighbors(self):\n",
+    "        list_repr=list(self.repr)\n",
+    "        neighbors=[]\n",
+    "\n",
+    "        if self.repr==\"0001\":\n",
+    "            neighbors_repr=[\"1001\",\"0101\",\"0011\"]\n",
+    "            for neighbor_repr in neighbors_repr:\n",
+    "                neighbors.append(IntBin_BitFlip_HillClimbingSolution(repr=neighbor_repr))\n",
+    "        else:\n",
+    "\n",
+    "            for i in range(len(list_repr)):\n",
+    "                neighbor_list_repr=deepcopy(list_repr)\n",
+    "                if neighbor_list_repr[i]=='0':\n",
+    "                    neighbor_list_repr[i]='1'\n",
+    "                else:\n",
+    "                    neighbor_list_repr[i]='0'\n",
+    "\n",
+    "                neighbor_str_repr=\"\".join(neighbor_list_repr)\n",
+    "                neighbors.append(IntBin_BitFlip_HillClimbingSolution(repr=neighbor_str_repr))\n",
+    "        return neighbors"
    ]
   },
   {
@@ -72,9 +93,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Solution 1011\n",
+      "Neighbors:\n",
+      "0011\n",
+      "1111\n",
+      "1001\n",
+      "1010\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize random solution\n",
     "solution = IntBin_BitFlip_HillClimbingSolution('1011')\n",
@@ -95,11 +129,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current solution: 0111 with fitness 3\n",
+      "Neighbor: 1111 with fitness 4\n",
+      "Neighbor: 0011 with fitness 2\n",
+      "Neighbor: 0101 with fitness 2\n",
+      "Neighbor: 0110 with fitness 2\n",
+      "Current solution: 1111 with fitness 4\n",
+      "Neighbor: 0111 with fitness 3\n",
+      "Neighbor: 1011 with fitness 3\n",
+      "Neighbor: 1101 with fitness 3\n",
+      "Neighbor: 1110 with fitness 3\n",
+      "Best solution is: 1111\n"
+     ]
+    }
+   ],
    "source": [
-    "#TODO: Apply hill climbing to IntBin"
+    "#TODO: Apply hill climbing to IntBin\n",
+    "initial_solution=IntBin_BitFlip_HillClimbingSolution()\n",
+    "best_solution=hill_climbing(initial_solution,maximization=True,verbose=True)\n",
+    "\n",
+    "print('Best solution is:',best_solution)"
    ]
   },
   {
@@ -111,11 +167,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best solution is: 1111\n",
+      "Best solution is: 1111\n",
+      "Best solution is: 1111\n",
+      "Best solution is: 1111\n",
+      "Best solution is: 1111\n",
+      "Best solution is: 1111\n",
+      "Best solution is: 1111\n",
+      "Best solution is: 1111\n",
+      "Best solution is: 1111\n",
+      "Best solution is: 1111\n"
+     ]
+    }
+   ],
    "source": [
-    "#TODO: Apply hill climbing to IntBin 10 times with differnt random initial solutions"
+    "#TODO: Apply hill climbing to IntBin 10 times with differnt random initial solutions\n",
+    "for i in range(10):\n",
+    "    initial_solution=IntBin_BitFlip_HillClimbingSolution()\n",
+    "    best_solution=hill_climbing(initial_solution,maximization=True,verbose=False)\n",
+    "    print('Best solution is:',best_solution)"
    ]
   },
   {
@@ -252,11 +329,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Implement IntMaxSolution class"
+    "# TODO: Implement IntMaxSolution class\n",
+    "class IntMaxSolution(Solution):\n",
+    "    def random_initial_representation(self):\n",
+    "        return randint(1,15)\n",
+    "        \n",
+    "    def fitness(self):\n",
+    "        return self.repr"
    ]
   },
   {
@@ -268,9 +351,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Solution 3 with fitness 3\n"
+     ]
+    }
+   ],
    "source": [
     "solution = IntMaxSolution(3)\n",
     "\n",
@@ -293,11 +384,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Implement IntMaxHillClimbingSolution class"
+    "# TODO: Implement IntMaxHillClimbingSolution class\n",
+    "class IntMaxHillClimbingSolution(IntMaxSolution):\n",
+    "    def get_neighbors(self):\n",
+    "        if self.repr==1:\n",
+    "            return [2]\n",
+    "        elif self.repr==15:\n",
+    "            return [14]\n",
+    "        else:\n",
+    "            return [\n",
+    "            IntMaxHillClimbingSolution(self.repr-1),IntMaxHillClimbingSolution(self.repr+1)]\n",
+    "    "
    ]
   },
   {
@@ -309,12 +410,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Solution 1\n",
+      "Neighbors:\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize random solution\n",
-    "solution = IntMaxHillClimbingSolution(3)\n",
+    "solution = IntMaxHillClimbingSolution(1)\n",
     "print('Solution', solution)\n",
     "\n",
     "neighbors = solution.get_neighbors()\n",
@@ -332,9 +443,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current solution: 14 with fitness 14\n",
+      "Neighbor: 13 with fitness 13\n",
+      "Neighbor: 15 with fitness 15\n",
+      "Current solution: 15 with fitness 15\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'int' object has no attribute 'fitness'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[11], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m initial_solution \u001b[38;5;241m=\u001b[39m IntMaxHillClimbingSolution()\n\u001b[1;32m----> 2\u001b[0m best_solution \u001b[38;5;241m=\u001b[39m \u001b[43mhill_climbing\u001b[49m\u001b[43m(\u001b[49m\u001b[43minitial_solution\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmaximization\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mverbose\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mBest solution\u001b[39m\u001b[38;5;124m'\u001b[39m, best_solution)\n",
+      "File \u001b[1;32mc:\\Users\\inesm\\OneDrive\\Documentos\\GitHub\\CIFO-24-25\\notebooks-class\\..\\library\\algorithms\\hill_climbing.py:43\u001b[0m, in \u001b[0;36mhill_climbing\u001b[1;34m(initial_solution, maximization, max_iter, verbose)\u001b[0m\n\u001b[0;32m     40\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m neighbor \u001b[38;5;129;01min\u001b[39;00m neighbors:\n\u001b[0;32m     42\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m verbose:\n\u001b[1;32m---> 43\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNeighbor: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mneighbor\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m with fitness \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mneighbor\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfitness\u001b[49m()\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     45\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m maximization \u001b[38;5;129;01mand\u001b[39;00m (neighbor\u001b[38;5;241m.\u001b[39mfitness() \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m current\u001b[38;5;241m.\u001b[39mfitness()):\n\u001b[0;32m     46\u001b[0m         current \u001b[38;5;241m=\u001b[39m deepcopy(neighbor)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'int' object has no attribute 'fitness'"
+     ]
+    }
+   ],
    "source": [
     "initial_solution = IntMaxHillClimbingSolution()\n",
     "best_solution = hill_climbing(initial_solution, maximization=True, verbose=True)\n",
@@ -353,7 +487,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "IntMaxSolution.random_initial_representation() takes 0 positional arguments but 1 was given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[23], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m10\u001b[39m):\n\u001b[1;32m----> 2\u001b[0m     initial_solution \u001b[38;5;241m=\u001b[39m \u001b[43mIntMaxHillClimbingSolution\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;28mprint\u001b[39m(hill_climbing(initial_solution, maximization\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m))\n",
+      "File \u001b[1;32mc:\\Users\\inesm\\OneDrive\\Documentos\\GitHub\\CIFO-24-25\\notebooks-class\\..\\library\\solution.py:7\u001b[0m, in \u001b[0;36mSolution.__init__\u001b[1;34m(self, repr)\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;28mrepr\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;66;03m# To initialize a solution we need to know it's representation. If no representation is given, a solution is randomly initialized.\u001b[39;00m\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mrepr\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m----> 7\u001b[0m         \u001b[38;5;28mrepr\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrandom_initial_representation\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      8\u001b[0m     \u001b[38;5;66;03m# Attributes\u001b[39;00m\n\u001b[0;32m      9\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mrepr \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mrepr\u001b[39m\n",
+      "\u001b[1;31mTypeError\u001b[0m: IntMaxSolution.random_initial_representation() takes 0 positional arguments but 1 was given"
+     ]
+    }
+   ],
    "source": [
     "for _ in range(10):\n",
     "    initial_solution = IntMaxHillClimbingSolution()\n",
@@ -421,11 +568,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Implement the 2D fitness landscape visualization functions"
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: Implement the 2D fitness landscape visualization functions\n",
+    "\n",
+    "def draw_2d_fitness_landscape(ordered_solution_space):\n",
+    "    fitness_values = []\n",
+    "    for solution in ordered_solution_space:\n",
+    "        fitness_values.append(solution.fitness())\n",
+    "\n",
+    "    solutions_repr=[repr(solution) for solution in ordered_solution_space]\n",
+    "\n",
+    "    sns.lineplot(x=solutions_repr,y=fitness_values)\n",
+    "    plt.ylabel(\"Fitness\")\n",
+    "    plt.xlabel(\"Solutions\")\n",
+    "    plt.show()\n"
    ]
   },
   {
@@ -441,7 +610,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Call the function by passing it ordered solutions for the IntBin problem"
+    "# TODO: Call the function by passing it ordered solutions for the IntBin problem\n",
+    "ordered_sol"
    ]
   },
   {
@@ -477,7 +647,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "cifo",
    "language": "python",
    "name": "python3"
   },
@@ -491,7 +661,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
